<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/card_fan"
        android:contentDescription="@string/logo_string"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/play"
        android:theme="@style/buttonStyle" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:layout_below="@id/new_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:theme="@style/buttonStyle"
        android:visibility="gone" />

</RelativeLayout>
