<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top Card Back Images for War (initially hidden) -->
    <ImageView
        android:id="@+id/top_back1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/top_back2"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginTop="-40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/top_back3"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginTop="-60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- Main Top Card -->
    <ImageView
        android:id="@+id/top_card"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginTop="-80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Top Card Count and Wins TextViews -->
    <TextView
        android:id="@+id/top_card_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_cards"
        android:textSize="20sp"
        android:textAlignment="center"
        android:drawableTop="@drawable/smallback"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toTopOf="@id/top_card"
        app:layout_constraintBottom_toBottomOf="@id/top_card"
        app:layout_constraintEnd_toStartOf="@id/top_card"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/top_card_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_wins"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/top_card"
        app:layout_constraintBottom_toBottomOf="@id/top_card"
        app:layout_constraintStart_toEndOf="@id/top_card"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp" />

    <!-- Deal Button -->
    <Button
        android:id="@+id/dealBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEAL"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/top_card"
        app:layout_constraintBottom_toTopOf="@id/bottom_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Bottom Card Back Images for War (initially hidden) -->
    <ImageView
        android:id="@+id/bottom_back1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/bottom_back2"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginBottom="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/bottom_back3"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginBottom="-60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- Main Bottom Card -->
    <ImageView
        android:id="@+id/bottom_card"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/back"
        android:layout_marginBottom="-80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Card Count and Wins TextViews -->
    <TextView
        android:id="@+id/bottom_card_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_cards"
        android:textSize="20sp"
        android:textAlignment="center"
        android:drawableBottom="@drawable/smallback"
        android:drawablePadding="10dp"
        app:layout_constraintTop_toTopOf="@id/bottom_card"
        app:layout_constraintBottom_toBottomOf="@id/bottom_card"
        app:layout_constraintStart_toEndOf="@id/bottom_card"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/bottom_card_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_wins"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/bottom_card"
        app:layout_constraintBottom_toBottomOf="@id/bottom_card"
        app:layout_constraintEnd_toStartOf="@id/bottom_card"
        android:layout_marginEnd="24dp" />

    <!-- Left Sword -->
    <ImageView
        android:id="@+id/left_sword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sword"
        android:translationX="-500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Right Sword -->
    <ImageView
        android:id="@+id/right_sword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:translationX="500dp"
        android:scaleX = "-1" />

    <RadioGroup
        android:id="@+id/color_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/radio_green"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/Table_Green" />

        <RadioButton
            android:id="@+id/radio_blue"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/Table_Blue" />

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/Table_Brown" />

        <RadioButton
            android:id="@+id/radio_red"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/Table_Red" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:checked="true"
            android:background="@color/black" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
